Phase 4 Complete: Production Root CA initialized on Nitrokey HSM. - Resolved Java 21 module encapsulation issue. - Fixed HSM key visibility by switching to native EJBCA generation. - Purged Pilot CA Subject DN collisions from database. - Updated all phase documentation and Master Plan with lessons learned.